--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>third</title>
 </head>
 <body>
-    
+    <h1>This is my new githab push code</h1>
+    <h3>today is my assignment day</h3>
+    <p>now i willpush <code></code></p>
 </body>
 </html>
