--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>This is my new githab push code</h1>
     <h3>today is my assignment day</h3>
     <p>now i willpush <code></code></p>
+    <img src="picture2.jpg" alt="">
 </body>
 </html>
