--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <h3>today is my assignment day</h3>
     <p>now i willpush <code></code></p>
     <img src="picture2.jpg" alt="">
+    <br>
+    <p>THIS IS MY FIRST TIME</p>
+    <a href="https://github.com/shikha1876/my-third-repo/blob/main/index.html">github</a>
+
 </body>
 </html>
