--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>This is my new githab push code</h1>
-    <h3>today is my assignment day</h3>
+    <h3>today is my assignment day to day</h3>
     <p>now i willpush <code></code></p>
     <img src="picture2.jpg" alt="">
     <br>
