--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <p>THIS IS MY FIRST TIME</p>
     <a href="https://github.com/shikha1876/my-third-repo/blob/main/index.html">github</a>
     <h4>sguyiuuuoioijlkh</h4>
+    <img src="picture2.jpg" alt="">
 </body>
 </html>
